	* Gonryunn Quests - 0% - Botting on official Servers
	* Artifacts of God (MRO GOD ITEM QUESTS) - 1% - resources only from MRO Official
	  guide book so, probably unofficial
MasterOfMuppets
	* Working on The Sign Quest atm.
	* Updating Items / Scripts
Nexon
	* Adding in the new Abyss/Thanatos/Lighthalzen NPC's and optimizing them.

== Changelog ==

Date		Added
======
12/26
	* Removed duplicate job_hunter.gat mapflags, by Harbin [LuzZza]
	* Changed remaining Dokkaebi Items into Dokebi, by Harbin, reported by Haplo [LuzZza]
	* Changed Dokkaebi to Dokebi, by Harbin [Vicious]
	* Updated Culvert Recruiter to allow novices to go to Culvert
	 & Al De turbo track warps by Harbin [Vicious]
	* Added missing cutin's in Priest Quest [Komurka]
12/23
	* Small fix (Falcon Taming -> Falcon Mastery) [Komurka]
	* Desert Wolf Babe -> Baby Desert Wolf (iRO), thx to Poki#3 [Komurka]
12/22
	* Added a Bartender NPC in morroc, thanks to Persian69 [Vicious]

	* Fixed X-Hairpin ingredients, thx2 Komurka [Lupus]
12/21
	* Fixed Hugel warps, thanks to... ppl.. ^^; [Vicious]
	* Fixed Ayothaya warps, thanks to Sir_Loon [Lupus]
12/19
	* Added Sara-chan's corrections to Hugel warps. [Valaris]
	* Added Garden City Hugel city and field maps and warps (thanks to Sara-chan ^_^) [Valaris]
	* Added a custom event/quest 'Karachun' (for magic Christmas rings) [Lupus]
12/17
	* Fixed more Monsters Museum typos, thx 2Haplo. Also fixed some monsters names [Lupus]
12/16
	* Updated Chef Hat quest items Feather 300->330. Thanks to Ishizu-chan [Lupus]
	* Reversed custom Wizard Hat quest due to Treasure Box drop changes [Lupus]
	* Updated exploitable custom quest for Berzebub Card [Lupus]
12/15
	* Added kobold leader to geffen feild 12 in eamobs and omobs. [Kayla]
12/14
	* Updated wedding costs to offical values (600k for groom, 500k for bride). Deleted
	  npc/other/wedding.txt (very old). Enabled marriage.txt by default. [Kayla]
12/13