@@ -353,9 +353,9 @@
 377:  -- Player %s has rejected the duel --
 // Main chat
 380: Main chat has been activated.
-381: Main chat already activated.
+381: Main chat is already activated.
 382: Main chat has been disabled.
-383: Main chat already disabled.
+383: Main chat is already disabled.
 384: Main chat is currently enabled. Usage: @main <on|off>, @main <message>.
 385: Main chat is currently disabled. Usage: @main <on|off>, @main <message>.
 386: Main@%s: %s
