@@ -64,9 +64,9 @@ npc: npc/jobs/2-2a/Stalker.txt
 // -- 1-1E (Without Quest)
 npc: npc/jobs/1-1e/taekwon.txt
 // -- 2-1E (Place Holder)
-//npc: npc/jobs/2-1e/StarGladiator.txt
+npc: npc/jobs/2-1e/StarGladiator.txt
 // -- 2-2E (Place Holder)
-//npc: npc/jobs/2-2e/SoulLinker.txt
+npc: npc/jobs/2-2e/SoulLinker.txt
 // --------------------------------------------------------------
 // ------------------------ Skill Quests ------------------------
 npc: npc/quests/skills/acolyte_skills.txt
