@@ -25,6 +25,8 @@ Nexon
 
 Date		Added
 ======
+12/27
+	* Added Soul Linker / Star Gladiator temp job quests. Accordingly updated Taekwon Job NPC [Lupus]
 12/26
 	* Removed duplicate job_hunter.gat mapflags, by Harbin [LuzZza]
 	* Changed remaining Dokkaebi Items into Dokebi, by Harbin, reported by Haplo [LuzZza]
